# ROS-Remote

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  new-feature.md
.github/workflows/: analyze-pico.yml  analyze-uros.yml  pico-build.yml  pico-codeql.yml
.github/workflows/codeql-pico-scripts/: pico-build.sh  uros-build.sh
CAD Files/: Housing_Center_LCD_Brace.SLDPRT  Housing_Center_Left_Side_Interface.DXF  Housing_Center_Right_Side_Interface.DXF  Housing_Right.SLDPRT  Housing_Sides_Backplate.SLDPRT  README.md
CAD Files/STEP Files/: Housing_Center.STEP  Housing_Center_Access_Cover.STEP  Housing_Center_Backplate.STEP  Housing_Center_LCD_Brace.STEP  Housing_Left.STEP  Housing_Right.STEP  Housing_Sides_Backplate.STEP
CAD Files/STL Files/: Housing_Center.STL  Housing_Center_Access_Cover.STL  Housing_Center_Backplate.STL  Housing_Left.STL  README.md
CAD Files/Solidworks Assets/Blocks/: 40x60mm_protoboard.SLDBLK  JH-D202X_joystick.SLDBLK
CAD Files/Solidworks Assets/Parts/: 12mm_key_operated_switch.step  20_pin_female_header_2.54mm.step  40x60mm_protoboard.SLDPRT  KD2-2X_button.step  M2.5_8.SLDPRT  M2.5_nut.SLDPRT  M2_8.SLDPRT  OM200A-M2_joystick.step  Potentiometer.sldprt  Potentipmeter_knob.step  Waveshare_7_inch_HDMI_LCD_H.SLDPRT
Source Code/pico_ws/: CMakeLists.txt  micro_ros.cmake
Source Code/pico_ws/.devcontainer/: Dockerfile  devcontainer.json
Source Code/pico_ws/libmicroros/: build_uros.sh
Source Code/pico_ws/libmicroros/src/remote_pico_coms/: CMakeLists.txt  (+2 more)
Source Code/pico_ws/src/: CMakeLists.txt
Source Code/pico_ws/src/pico/: CMakeLists.txt  Pico.c++
Source Code/pico_ws/src/pico/helpers/: Definitions.h  Diag_Msgs.h  IO_Helpers_General.c++  IO_Helpers_General.h  Self_Test.c++  Sensor_Publishers.c++  uROS_Init.c++  uROS_Init.h
Source Code/pico_ws/src/systest/: CMakeLists.txt  Pico.c++
Source Code/ros_ws_remote/: README.md
Source Code/ros_ws_remote/.devcontainer/: Dockerfile  devcontainer.json
Source Code/ros_ws_remote/.prodcontainer/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
Source Code/ros_ws_remote/deployment/: README.md  run_gui.bash  setup_gui.bash  update_gui.bash
Source Code/ros_ws_remote/src/ros_remote_gui/: ROS_Remote_UI.pyproject  package.xml  setup.py
Source Code/ros_ws_remote/src/ros_remote_gui/ros_remote_gui/: config.py  init.py  main.py  main_window.py  ros_main.py
Source Code/ros_ws_remote/src/ros_remote_gui/ros_remote_gui/gui_files/: calibration_result_dialog.ui  joystick_dialog.ui  main_window.ui  test_remote_buttons_dialog.ui  ui_calibration_result_dialog.py  ui_joystick_dialog.py  ui_main_window.py  ui_selftest_result_dialog.py  ui_test_remote_buttons_dialog.py
Source Code/ros_ws_remote/src/ros_remote_gui/ros_remote_gui/modules/: diag_tab.py  main_tab.py  motor_tab.py  power_tab.py  sensors_tab.py
Source Code/ros_ws_remote/src/ros_remote_gui/ros_remote_gui/utils/: gui_utils.py  qt_thread_worker.py  ui_classes_init.py
Source Code/ros_ws_remote/src/ros_remote_gui/src/: __init__.py  maintest.py
Source Code/ros_ws_remote/src/ros_remote_gui/src/gui/: about_dialog.ui  joystick_dialog.ui  selftest_result_dialog.ui  ui_about_dialog.py  ui_calibration_result_dialog.py  ui_joystick_dialog.py  ui_selftest_result_dialog.py  ui_test_remote_buttons_dialog.py
Source Code/ros_ws_remote/src/ros_remote_gui/src/gui_files/: about_dialog.ui  calibration_result_dialog.ui  main_window.ui  selftest_result_dialog.ui  test_remote_buttons_dialog.ui  ui_about_dialog.py  ui_joystick_dialog.py  ui_main_window.py  ui_selftest_result_dialog.py  ui_test_remote_buttons_dialog.py
Source Code/ros_ws_remote/src/ros_remote_gui/src/utils/: ui_classes_init.py
Source Code/ros_ws_remote/src/ros_remote_gui/util_scripts/: generate_ui_py_files.sh  qt_index_rearranger.py
Source Code/ros_ws_remote/src/ros_remote_pui/: package.xml
Source Code/ros_ws_remote/src/test_camera_publisher/: package.xml
cad_files/: Housing_Center.SLDPRT  Housing_Center_Access_Cover.SLDPRT  Housing_Center_Backplate.SLDPRT  Housing_Left.SLDPRT
cad_files/solidworks_assets/parts/: 12mm_key_operated_switch.step  16mm_e-stop_button.SLDPRT  7mm_Momentary_Button.SLDPRT  Blue_led.SLDPRT  Generic_Power_Bank_Representation.SLDPRT  Green_led.SLDPRT  M4_20_DIN_7991.SLDPRT  M4_nut.SLDPRT  M6_nut.SLDPRT  OM200A-M2_joystick.step  Red_led.SLDPRT  Rotary_encoder_module.SLDPRT  Toggle_Switch.SLDPRT  Yellow_led.SLDPRT
cad_files/step_files/: Housing_Center_Access_Cover.STEP  Housing_Center_LCD_Brace.STEP  Housing_Sides_Backplate.STEP
cad_files/stl_files/: Housing_Center_LCD_Brace.STL  Housing_Right.STL  Housing_Sides_Backplate.STL
source_code/: README.md
source_code/pico_ws/: CMakeLists.txt  README.md  micro_ros.cmake
source_code/pico_ws/.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
source_code/pico_ws/.devcontainer/vscode_config/: c_cpp_properties.json  settings.json
source_code/pico_ws/libmicroros/: build_uros.sh  my_toolchain.cmake
source_code/pico_ws/src/lib/: CMakeLists.txt
source_code/pico_ws/src/pico/: Pico.c++
source_code/pico_ws/src/posix/: functions.c  functions.h
source_code/ros_ws_remote/.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
source_code/ros_ws_remote/deployment/: README.md  run_gui.bash  setup_gui.bash  update_gui.bash
source_code/ros_ws_remote/src/ros_remote_gui/: ROS_Remote_UI.pyproject  package.xml  setup.cfg  setup.py
source_code/ros_ws_remote/src/ros_remote_pui/: package.xml  setup.cfg  setup.py
source_code/ros_ws_remote/src/ros_remote_pui/ros_remote_pui/: config.py  encoder_handler.py  remote_state.py  ros_main.py  rpi_io_handler.py
source_code/ros_ws_remote/src/test_camera_publisher/: package.xml  setup.cfg  setup.py
source_code/ros_ws_remote/src/test_camera_publisher/test_camera_publisher/: __init__.py  config.py  main.py  pattern_gen.py  ros_main.py
(+57 files in other folders)
