<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>test_camera_publisher</name>
    <version>2024.11.4</version>
    <description>Test CompressedImage publisher for the ROS Remote Project.</description>
    <maintainer email="samyarsadat@gigawhat.net">Samyar Sadat Akhavi</maintainer>
    <license>GPL-3.0-only</license>

    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>python3-opencv</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>